--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ Section of Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/59af6d82c4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
