--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <i class="icon fa-solid fa-caret-down"></i>
         </div>
         <div class="answers">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -22,6 +23,7 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <i class="icon fa-solid fa-caret-down"></i>
         </div>
         <div class="answers">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -31,6 +33,7 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <i class="icon fa-solid fa-caret-down"></i>
         </div>
         <div class="answers">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -40,6 +43,7 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <i class="icon fa-solid fa-caret-down"></i>
         </div>
         <div class="answers">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
