--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
-            <i class="icon active fa-solid fa-caret-down"></i>
+            <i class="icon  fa-solid fa-caret-down"></i>
         </div>
-        <div class="answers active">
+        <div class="answers ">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
         </div>
@@ -34,9 +34,9 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
-            <i class="icon fa-solid fa-caret-down"></i>
+            <i class="icon  fa-solid fa-caret-down"></i>
         </div>
-        <div class="answers">
+        <div class="answers ">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
         </div>
@@ -44,12 +44,13 @@
     <div class="accordian">
         <div class="questions">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
-            <i class="icon fa-solid fa-caret-down"></i>
+            <i class="icon  fa-solid fa-caret-down"></i>
         </div>
-        <div class="answers">
+        <div class="answers ">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
