--- a/index.html
+++ b/index.html
@@ -12,43 +12,44 @@
     <h2>FAQ's</h2>
     <div class="accordian">
         <div class="questions">
-            <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <h4>What is the difference between == and === in JavaScript?
+            </h4>
             <i class="icon  fa-solid fa-caret-down"></i>
         </div>
         <div class="answers ">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
+            <p>== performs type coercion, so it compares values after converting them to a common type. === is a strict equality operator, which compares both the value and the type without coercion.
+            </p>
         </div>
     </div>
     
     <div class="accordian">
         <div class="questions">
-            <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <h4>What is the purpose of npm in Node.js</h4>
             <i class="icon fa-solid fa-caret-down"></i>
         </div>
         <div class="answers">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
+            <p>npm (Node Package Manager) is a tool for managing JavaScript libraries and dependencies in Node.js projects. It allows developers to install, update, and manage reusable code modules from a central registry.
+            </p>
         </div>
     </div>
     <div class="accordian">
         <div class="questions">
-            <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <h4>What is an API, and why is it important in web development?
+            </h4>
             <i class="icon  fa-solid fa-caret-down"></i>
         </div>
         <div class="answers ">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
+            <p>An API (Application Programming Interface) allows different software systems to communicate with each other. 
+                In web development, APIs enable the frontend (React) to interact with the backend (Node.js) by exchanging data using protocols like HTTP.</p>
         </div>
     </div>
     <div class="accordian">
         <div class="questions">
-            <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            <h4>What is React?</h4>
             <i class="icon  fa-solid fa-caret-down"></i>
         </div>
         <div class="answers ">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Culpa iusto eum, cumque illo voluptas porro quam fugiat eveniet quia. Vitae.</p>
+            <p>React is a JavaScript library used for building user interfaces, primarily for single-page applications. It allows developers to create reusable UI components, manage the state of applications, and efficiently update and render the right components when the data changes./p>
         </div>
     </div>
     <script src="script.js"></script>
