--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     </div>
     <div class="accordian">
         <div class="questions">
-            <h4>What is React?</h4>
+            <h4>What is the purpose of the Virtual DOM in React</h4>
             <i class="icon  fa-solid fa-caret-down"></i>
         </div>
         <div class="answers ">
-            <p>React is a JavaScript library used for building user interfaces, primarily for single-page applications. It allows developers to create reusable UI components, manage the state of applications, and efficiently update and render the right components when the data changes./p>
+            <p>The Virtual DOM is a lightweight copy of the actual DOM (Document Object Model) that React uses to determine changes needed in the UI.
+            </p>
         </div>
     </div>
     <script src="script.js"></script>
